syntax = "proto3";

import "common.proto";

package friend;

option java_multiple_files = true;
option java_package = "com.chatapp.friends";


service FriendManagingService {

  rpc GetRequests(common.User) returns (stream common.User);
  rpc GetFriends(common.User) returns (FriendList);
  rpc SetFriendship(AnswerRequest) returns (common.ServiceResponse);
  rpc AddFriendship(FriendRequest) returns (common.ServiceResponse);
}


message UserFriend {

  common.User user = 1;
  string alias = 2;
  bytes profile_picture = 3;
  string last_msg = 4;
  int32 unseen_chats = 5;
  string timestamp = 6;
  bool is_sender = 7;
}

message FriendList {

  repeated UserFriend friends = 1;
}

message AnswerRequest {

  enum Answer {
    
    ACCEPTED = 0;
    DENIED = 1;
    BLOCKED = 2;
  }

  common.User user = 1;
  common.User requester = 2;
  Answer answer = 3; 
}

message FriendRequest {

  common.User user = 1;
  string friend = 2;
}
